# grovepad

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  index.html  knip.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.toml
.claude/: launch.json
docs/: api-widget-ideas.md  architecture-map.md  canvas-engine.md  circuit-engine.md  codebase-map.md  database-deployment.md  local-ai-runtime.md  manual-smoke-checklist.md  mcp-connector.md  native-apps.md  native-os-widgets.md  patch-registry.md  play-store-submission.md  popup-panel-design.md  realtime-collaboration.md  scenario-intelligence.md  storage-format-plan.md  ui-refinement-audit.md  widget-constitution.md  widget-controls-reinvention.md  widget-expansion-50.md  (+6 more)
src-tauri/plugins/native-widget/: Cargo.toml  build.rs
src-tauri/plugins/native-widget/android/: .gitignore  build.gradle.kts  consumer-rules.pro  settings.gradle
src-tauri/plugins/native-widget/android/src/main/: AndroidManifest.xml
src-tauri/plugins/native-widget/android/src/main/java/com/grovepad/nativewidget/: GrovepadNoteWidget.kt  NativeWidgetPlugin.kt
src-tauri/plugins/native-widget/android/src/main/res/values/: strings.xml
src-tauri/plugins/native-widget/android/src/main/res/xml/: grovepad_note_widget_info.xml
src-tauri/plugins/native-widget/apple/: GrovepadWidgetBridge.swift
src-tauri/plugins/native-widget/ios/: Package.swift
src-tauri/plugins/native-widget/ios/Sources/: NativeWidgetPlugin.swift
src-tauri/plugins/native-widget/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+614 files in other folders)
