[package]
name = "tauri-plugin-native-widget"
version = "0.1.0"
authors = ["Grovepad"]
description = "Grovepad Note home-screen widget bridge"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-native-widget"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3" }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }
